# FactoryWorkers

./: CMakeLists.txt
include/: factory.h
lib/include/: factory.h
lib/src/: factory.cpp
lib/tests/: main.cpp
src/: factory.cpp  main.cpp
